# plant_identification_cnn

./: .gitignore  README.md  app.py  hf_training.ipynb  hf_training_tf_colab.ipynb  main.py  mlflow.db  pyproject.toml  requirements.txt
plant_classifier/: __init__.py  config.py  mlflow_databricks_integration.py  resources.py
plant_classifier/configs/: __init__.py  data.yaml  deploy.yaml  schema.py  train.yaml
plant_classifier/entities/: __init__.py  collator.py  deploy.py  drift_detector.py  evaluator.py  load_data.py  model.py  preproces.py
plant_classifier/pipelines/: __init__.py  data_ingestion.py  deployment_pipeline.py  inference_pipeline.py  training_pipeline.py
plant_classifier/utils/: __init__.py  utils.py  visualizations.py
scripts/: compute_drift_reference.py
