[project]
name = "plant-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "nvitop>=1.5.3",
    "pillow>=12.0.0",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "torch>=2.9.0",
    "transformers[torch]>=4.57.1",
]
